# wallet-sdk

./: .gitignore  Cargo.toml  pubspec.yaml
example/: wallet_sdk_example.dart
lib/: wallet_sdk.dart
lib/src/: wallet_sdk_base.dart
src/: lib.rs
test/: wallet_sdk_test.dart
